--- a/modpack-update-checker/versions/0.8.9/changelog.txt
+++ b/modpack-update-checker/versions/0.8.9/changelog.txt
@@ -1,1 +1,26 @@
+***0.8.9***
+---
+**[ADD/DELETE]**    
+*MOD:*  
++Create Contraption Terminals  
++Exposure    
++Spell Checker    
++Better Treasure Map    
++Enhanced Boss Bars      
 
+**[CHANGE]**  
+
+<details>
+<summary>中文版本</summary>
+
+**[ADD/DELETE]**    
+*MOD:*  
++Create Contraption Terminals  
++Exposure    
++Spell Checker    
++Better Treasure Map    
++Enhanced Boss Bars     
+
+**[改变]**  
+
+</details>
